--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -16,6 +16,6 @@ bazel_dep(name = "buildifier_prebuilt", version = "6.1.0", dev_dependency = True
 
 aws = use_extension("//aws:extensions.bzl", "aws")
 aws.toolchain(aws_version = "1.14.2")
-use_repo(aws, "aws_toolchains")
+use_repo(aws, "aws_cli", "aws_toolchains")
 
 register_toolchains("@aws_toolchains//:all")
