--- a/aws/BUILD.bazel
+++ b/aws/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
+load("@rules_python//python:defs.bzl", "py_binary")
 load("//aws/private:resolved_toolchain.bzl", "resolved_toolchain")
 
 # For stardoc to reference the files
@@ -49,4 +50,11 @@ bzl_library(
     name = "toolchain",
     srcs = ["toolchain.bzl"],
     visibility = ["//visibility:public"],
+)
+
+py_binary(
+    name = "aws",
+    srcs = ["__main__.py"],
+    main = "__main__.py",
+    deps = ["@aws_cli//awscli:awscli_lib"],
 )
