--- a/aws/private/BUILD.bazel
+++ b/aws/private/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
+load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")
 
 bzl_library(
     name = "toolchains_repo",
@@ -16,4 +17,11 @@ bzl_library(
     name = "resolved_toolchain",
     srcs = ["resolved_toolchain.bzl"],
     visibility = ["//aws:__subpackages__"],
+)
+
+compile_pip_requirements(
+    name = "requirements",
+    extra_args = ["--allow-unsafe"],
+    requirements_in = "requirements.aws.txt",
+    requirements_txt = "requirements.txt",
 )
