--- a/.bazelrc
+++ b/.bazelrc
@@ -3,7 +3,7 @@
 # Settings that apply only to CI are in .github/workflows/ci.bazelrc
 
 # Required until this is the default; expected in Bazel 7
-# common --enable_bzlmod
+common --enable_bzlmod
 
 # Load any settings specific to the current user.
 # .bazelrc.user should appear in .gitignore so that settings are not shared with team members
