--- a/.github/workflows/BUILD.bazel
+++ b/.github/workflows/BUILD.bazel
@@ -5,8 +5,5 @@ buildifier(
     exclude_patterns = ["./.git/*"],
     lint_mode = "warn",
     mode = "diff",
-    target_compatible_with = select({
-        "@platforms//os:windows": ["@platforms//:incompatible"],
-        "//conditions:default": [],
-    }),
+    tags = ["manual"],
 )
