--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,5 +29,5 @@ jobs:
           {"folder": ".", "bzlmodEnabled": false},
           {"bazelversion": "5.4.0", "bzlmodEnabled": true},
           {"bazelversion": "5.4.0", "os": "macos-latest"},
-          {"bazelversion": "5.4.0", "os": "windows-latest"},
         ]
+      exclude_windows: true
