feat: a rule that performs s3 sync to download a file

--- a/aws/BUILD.bazel
+++ b/aws/BUILD.bazel
@@ -33,16 +33,20 @@ bzl_library(
 )
 
 bzl_library(
-    name = "defs",
-    srcs = ["defs.bzl"],
-    visibility = ["//visibility:public"],
-)
-
-bzl_library(
     name = "extensions",
     srcs = ["extensions.bzl"],
     visibility = ["//visibility:public"],
     deps = [":repositories"],
+)
+
+bzl_library(
+    name = "defs",
+    srcs = ["defs.bzl"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "//aws/private:s3_sync",
+        "@bazel_skylib//lib:paths",
+    ],
 )
 
 bzl_library(
