--- a/examples/python_lambda/BUILD.bazel
+++ b/examples/python_lambda/BUILD.bazel
@@ -7,6 +7,7 @@ load("@rules_python//python:pip.bzl", "compile_pip_requirements")
 
 compile_pip_requirements(
     name = "requirements",
+    requirements_in = "requirements.in",
 )
 
 aws_py_lambda(
