--- a/.github/workflows/buildifier.yaml
+++ b/.github/workflows/buildifier.yaml
@@ -16,4 +16,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: buildifier
-        run: bazel run --enable_bzlmod //.github/workflows:buildifier.check
+        run: bazel run //.github/workflows:buildifier.check
