--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,3 +31,14 @@ jobs:
           {"bazelversion": "5.4.0", "os": "macos-latest"},
         ]
       exclude_windows: true
+
+  run_cli:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: run CLI with bzlmod
+        working-directory: e2e/smoke
+        run: bazel run @aws help
+      - name: run CLI with workspace
+        working-directory: e2e/smoke
+        run: bazel run --noenable_bzlmod @aws help
