--- a/e2e/smoke/MODULE.bazel
+++ b/e2e/smoke/MODULE.bazel
@@ -5,3 +5,6 @@ local_path_override(
     module_name = "aspect_rules_aws",
     path = "../..",
 )
+
+aws = use_extension("@aspect_rules_aws//aws:extensions.bzl", "aws")
+use_repo(aws, "aws")
