--- a/examples/cli/BUILD.bazel
+++ b/examples/cli/BUILD.bazel
@@ -1,7 +1,6 @@
 load("@aspect_bazel_lib//lib:testing.bzl", "assert_contains")
 load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
 load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
-load("@rules_pkg//:pkg.bzl", "pkg_tar")
 
 # Demonstrates that you can use the CLI in a genrule.
 # The toolchain provides a "Make variable" named AWS_CLI_BIN that you can expand.
@@ -20,22 +19,11 @@ assert_contains(
 )
 
 # Demonstrate that the CLI can be included in a container image
-pkg_tar(
-    name = "aws_cli_layer",
-    srcs = [
-        "@aws_toolchains//:tar_bin",
-        "@aws_toolchains//:tar_files",
-    ],
-    include_runfiles = True,
-    package_dir = "/usr/local/aws-cli",
-    strip_prefix = ".",
-)
-
 oci_image(
     name = "image",
     base = "@ubuntu",
     entrypoint = ["/usr/local/aws-cli/aws"],
-    tars = [":aws_cli_layer"],
+    tars = ["@aws_toolchains//:aws_cli_layer"],
 )
 
 platform(
