--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -8,14 +8,14 @@ module(
 
 # Lower-bound dependency versions.
 # Do not change unless the rules no longer work with the current version.
-bazel_dep(name = "bazel_skylib", version = "1.6.1")
+bazel_dep(name = "aspect_bazel_lib", version = "2.5.3")
+bazel_dep(name = "bazel_skylib", version = "1.5.0")
 bazel_dep(name = "platforms", version = "0.0.8")
 bazel_dep(name = "rules_oci", version = "1.7.4")
 bazel_dep(name = "rules_python", version = "0.29.0")
 
 # Development dependencies which are not exposed to users
-bazel_dep(name = "aspect_bazel_lib", version = "2.5.3", dev_dependency = True)
-bazel_dep(name = "aspect_rules_py", version = "0.7.3", dev_dependency = True)
+bazel_dep(name = "aspect_rules_py", version = "0.7.1", dev_dependency = True)
 bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
 bazel_dep(name = "container_structure_test", version = "1.16.0", dev_dependency = True)
 
