refactor: code review comments
- add profile example
- add role attribute
- remove use of tar until I have time for using our toolchain

--- a/examples/release_to_s3/BUILD.bazel
+++ b/examples/release_to_s3/BUILD.bazel
@@ -16,8 +16,11 @@ expand_template(
 # Example usages:
 # Dry run: show what files would be copied
 #  bazel run //examples/release_to_s3 -- --dry_run
+# Use a different profile:
+#  bazel run //examples/release_to_s3 -- --profile=prod
 s3_sync(
     name = "release_to_s3",
     srcs = ["my_file.txt"],
     bucket = ":release_bucket",
+    role = "arn:aws:iam::250292866473:role/AspectEngineering",
 )
