refactor: remove dependency on rules_pkg (#63)
* refactor: stop using pkg_tar in external repo

* refactor: replace rules_pkg private API usage

* chore: remove dependency on rules_pkg

We'd rather not depend on more external maintainers

* chore: buildifier

* chore: code review comment - default mode 0644 on files

* fix: WORKSPACE users need bazel-lib

--- a/aws/private/BUILD.bazel
+++ b/aws/private/BUILD.bazel
@@ -24,7 +24,7 @@ bzl_library(
     name = "py_lambda",
     srcs = [
         "py_lambda.bzl",
-        "@rules_pkg//pkg:bzl_srcs",
+        "@aspect_bazel_lib//lib:tar",
     ],
     visibility = ["//aws:__subpackages__"],
 )
