chore: add a smoke test usage of s3_sync

--- a/e2e/smoke/BUILD
+++ b/e2e/smoke/BUILD
@@ -3,15 +3,17 @@ Add a basic smoke-test target below.
 """
 
 load("@bazel_skylib//rules:build_test.bzl", "build_test")
-# load("aspect_rules_aws//aws:defs.bzl", "...")
+load("@aspect_rules_aws//aws:defs.bzl", "s3_sync")
 
-# Replace with a usage of your rule/macro
-filegroup(name = "empty")
+s3_sync(
+    name = "upload_dry_run",
+    srcs = ["BUILD"],
+    bucket = "s3://my-test-bucket/release_destination",
+)
 
 build_test(
     name = "smoke_test",
     targets = [
-        # targets you add above
-        ":empty",
+        ":upload_dry_run",
     ],
 )
