Fix run_cli workspace run using bazel 8

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,4 +41,4 @@ jobs:
         run: bazel run @aws help
       - name: run CLI with workspace
         working-directory: e2e/smoke
-        run: bazel run --noenable_bzlmod @aws help
+        run: bazel run --enable_workspace @aws help
