--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -1,8 +1,11 @@
 bcr_test_module:
   module_path: "e2e/smoke"
   matrix:
-    bazel: ["7.x", "6.x"]
-    platform: ["debian10", "macos", "ubuntu2004", "windows"]
+    bazel:
+      - 6.x
+      - 7.x
+      - 8.x
+    platform: ["debian10", "macos", "ubuntu2204", "windows"]
   tasks:
     run_tests:
       name: "Run test module"
