--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -14,6 +14,7 @@ bazel_dep(name = "bazel_skylib", version = "1.5.0")
 bazel_dep(name = "platforms", version = "0.0.8")
 bazel_dep(name = "rules_oci", version = "1.7.4")
 bazel_dep(name = "rules_python", version = "0.29.0")
+bazel_dep(name = "tar.bzl", version = "0.3.0")
 
 # Development dependencies which are not exposed to users
 bazel_dep(name = "aspect_rules_py", version = "0.7.3", dev_dependency = True)
