--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -34,7 +34,7 @@ jobs:
   release:
     needs: tag
     if: needs.tag.outputs.new-tag == 'true' && needs.tag.outputs.new-tag-version-type != 'major'
-    uses: ./.github/workflows/release.yml
+    uses: ./.github/workflows/release.yaml
     with:
       tag_name: ${{ needs.tag.outputs.new-tag-version }}
     secrets:
