chore: remove docgen
stardoc is broken when compiling on my machine, and is generally a PITA to work with.
Let's rely on something downstream generating starlark docs

--- a/aws/BUILD.bazel
+++ b/aws/BUILD.bazel
@@ -1,8 +1,5 @@
-load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
+load("@aspect_bazel_lib//:bzl_library.bzl", "bzl_library")
 load("//aws/private:resolved_toolchain.bzl", "resolved_toolchain")
-
-# For stardoc to reference the files
-exports_files(["defs.bzl"])
 
 # This is the target rule authors should put in their "toolchains"
 # attribute in order to get a runtime for the correct platform.
@@ -18,25 +15,6 @@ resolved_toolchain(
     # even if no toolchain is registered.
     tags = ["manual"],
     visibility = ["//visibility:public"],
-)
-
-bzl_library(
-    name = "repositories",
-    srcs = ["repositories.bzl"],
-    visibility = ["//visibility:public"],
-    deps = [
-        "//aws/private:toolchains_repo",
-        "//aws/private:versions",
-        "@bazel_tools//tools/build_defs/repo:http.bzl",
-        "@bazel_tools//tools/build_defs/repo:utils.bzl",
-    ],
-)
-
-bzl_library(
-    name = "extensions",
-    srcs = ["extensions.bzl"],
-    visibility = ["//visibility:public"],
-    deps = [":repositories"],
 )
 
 bzl_library(
