--- a/.aspect/workflows/config.yaml
+++ b/.aspect/workflows/config.yaml
@@ -4,5 +4,19 @@ workspaces:
   - e2e/smoke
 tasks:
   - test:
+      name: "Test (Bazel 7.x)"
+      id: bazel-7
+      env:
+        USE_BAZEL_VERSION: 7.x
+  - test:
+      name: "Test (Bazel 8.x)"
+      id: bazel-8
+      env:
+        USE_BAZEL_VERSION: 8.x
+  - test:
+      name: Test (Bazel 9.x)
+      id: bazel-9
+      env:
+        USE_BAZEL_VERSION: rolling
 notifications:
   github: {}
