--- a/.aspect/workflows/config.yaml
+++ b/.aspect/workflows/config.yaml
@@ -4,6 +4,11 @@ workspaces:
   - e2e/smoke
 tasks:
   - test:
+      name: Test (Bazel 6.x)
+      id: bazel-6
+      env:
+        USE_BAZEL_VERSION: 6.x
+  - test:
       name: "Test (Bazel 7.x)"
       id: bazel-7
       env:
@@ -13,10 +18,5 @@ tasks:
       id: bazel-8
       env:
         USE_BAZEL_VERSION: 8.x
-  - test:
-      name: Test (Bazel 9.x)
-      id: bazel-9
-      env:
-        USE_BAZEL_VERSION: rolling
 notifications:
   github: {}
