--- a/aws/private/BUILD.bazel
+++ b/aws/private/BUILD.bazel
@@ -24,7 +24,7 @@ bzl_library(
     name = "py_lambda",
     srcs = [
         "py_lambda.bzl",
-        "@aspect_bazel_lib//lib:tar",
+        "@tar.bzl//tar:tar",
     ],
     visibility = ["//aws:__subpackages__"],
 )
