--- a/examples/cli/BUILD.bazel
+++ b/examples/cli/BUILD.bazel
@@ -1,5 +1,5 @@
-load("@aspect_bazel_lib//lib:testing.bzl", "assert_contains")
-load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
+load("@bazel_lib//lib:testing.bzl", "assert_contains")
+load("@bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
 load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
 
 # Demonstrates that you can use the CLI in a genrule.
