--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -13,11 +13,15 @@ bazel_dep(name = "bazel_skylib", version = "1.5.0")
 bazel_dep(name = "platforms", version = "1.0.0")
 bazel_dep(name = "rules_oci", version = "1.7.4")
 bazel_dep(name = "rules_python", version = "0.29.0")
+bazel_dep(name = "aspect_tools_telemetry", version = "0.2.8")
 
 # Development dependencies which are not exposed to users
 bazel_dep(name = "aspect_rules_py", version = "1.6.6", dev_dependency = True)
 bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1", dev_dependency = True)
 bazel_dep(name = "container_structure_test", version = "1.16.0", dev_dependency = True)
+
+tel = use_extension("@aspect_tools_telemetry//:extension.bzl", "telemetry")
+use_repo(tel, "aspect_tools_telemetry_report")
 
 bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
 bazel_lib_toolchains.jq()
